# ComfyUI-Champ

./: README.md  nodes.py  pyproject.toml  requirements.txt  wf.json
models/: champ_model.py  guidance_encoder.py
pipelines/: pipeline_aggregation.py
utils/: video_utils.py
